--- a/first.tex
+++ b/first.tex
@@ -18,7 +18,7 @@ I'm fine thanks.
 $x^2+y^2 = (x+y)^2$
 \begin{table}[htbp]
     \centering
-    \caption{表格标题}
+    \caption{时}
     \begin{tabular}{ccc}
         1 & 2 & 3 \\
         4 & 5 & 6 \\
