--- a/first.tex
+++ b/first.tex
@@ -7,28 +7,31 @@
 \date{2020.08.02}
 \begin{document}
     \maketitle
-\begin{abstract}
-    \lipsum[2]
-\end{abstract}
-\tableofcontents
-\section{This is a section}
-How are you?
-I'm fine thanks.  
+    \begin{abstract}
+        \lipsum[2]
+    \end{abstract}
+    \tableofcontents
 
-$x^2+y^2 = (x+y)^2$
-\begin{table}[htbp]
-    \centering
-    \caption{时}
-    \begin{tabular}{ccc}
-        1 & 2 & 3 \\
-        4 & 5 & 6 \\
-        7 & 8 & 9
-    \end{tabular}
-\end{table}
-\begin{enumerate}
-    \item[(1)] 这是第一点; 
-    \item[(2)] 这是第二点;
-    \item[(3)] 这是第三点. 
-\end{enumerate}
-Hello world! 你好，世界 ！
+
+    \section{This is a section}\label{sec:this-is-a-section}
+    How are you?
+    I'm fine thanks.
+
+    $x^2+y^2 = (x+y)^2$
+    \begin{table}[htbp]
+        \centering
+        \caption{时}
+        \begin{tabular}{ccc}
+            1 & 2 & 3 \\
+            4 & 5 & 6 \\
+            7 & 8 & 9
+        \end{tabular}\label{tab:table}
+    \end{table}
+    \begin{enumerate}
+        \item[(1)] 这是第一点;
+        \item[(2)] 这是第二点;
+        \item[(3)] 这是第三点.
+    \end{enumerate}
+    Hello world!
+    你好，世界 ！
 \end{document}
