--- a/first.tex
+++ b/first.tex
@@ -29,7 +29,7 @@
     \end{table}
     \begin{enumerate}
         \item[(1)] 这是第一点;
-        \item[(2)] 这是第二点;
+        \item[(2)] 这是第点;
         \item[(3)] 这是第三点.
     \end{enumerate}
     Hello world!
