--- a/first.tex
+++ b/first.tex
@@ -28,7 +28,7 @@
         \end{tabular}\label{tab:table}
     \end{table}
     \begin{enumerate}
-        \item[(1)] 这是第一点;
+        \item[(1)] 这是第点;
         \item[(2)] 这是第点;
         \item[(3)] 这是第三点.
     \end{enumerate}
