--- a/first.tex
+++ b/first.tex
@@ -2,36 +2,43 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{ctex}
 \usepackage{lipsum}
-\title{This is a test for vscode}
-\author{Ali-loner}
-\date{2020.08.02}
+
+\title{This is My First Article Writen by Latex}
+\author{Xu Bohan}
+\date{\today}
+
 \begin{document}
-    \maketitle
-    \begin{abstract}
-        \lipsum[2]
-    \end{abstract}
-    \tableofcontents
+\maketitle
+
+\begin{abstract}
+    This is the article's abstract
+\end{abstract}
+
+\tableofcontents
 
 
-    \section{This is a section}\label{sec:this-is-a-section}
-    How are you?
-    I'm fine thanks.
+\section{This is a section}
+How are you?
+I'm fine thanks.
 
-    $x^2+y^2 = (x+y)^2$
-    \begin{table}[htbp]
-        \centering
-        \caption{时}
-        \begin{tabular}{ccc}
-            1 & 2 & 3 \\
-            4 & 5 & 6 \\
-            7 & 8 & 9
-        \end{tabular}\label{tab:table}
-    \end{table}
-    \begin{enumerate}
-        \item[(1)] 这是第点;
-        \item[(2)] 这是第点;
-        \item[(3)] 这是第三点.
-    \end{enumerate}
-    Hello world!
-    你好，世界 ！
+$x^2+y^2 = (x+y)^2$
+\section{This is the second section}
+\begin{table}[htbp]
+    \centering
+    \caption{时}
+    \begin{tabular}{ccc}
+        1 & 2 & 3 \\
+        4 & 5 & 6 \\
+        7 & 8 & 9
+    \end{tabular}\label{tab:table}
+\end{table}
+
+\begin{enumerate}
+    \item[(1)] 这是第点;
+    \item[(2)] 这是第点;
+    \item[(3)] 这是第三点.
+\end{enumerate}
+
+Hello world!
+你好，世界 ！
 \end{document}
