--- a/first.tex
+++ b/first.tex
@@ -22,6 +22,8 @@ How are you?
 I'm fine thanks.
 
 $x^2+y^2 = (x+y)^2$
+
+$\sqrt[5](x)*(x*y)$
 \section{This is the second section}
 \begin{table}[htbp]
     \centering
